--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@emotion/styled": "^11.14.0",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3",
+    "react-select": "^5.10.1",
+    "select": "^1.1.2",
     "sweetalert2": "^11.21.0"
   },
   "devDependencies": {
